"Edited Layout and fixed bugs"

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/layoutbackgroudedited"
     tools:context=".MainActivity"
     tools:visibility="visible">
 
@@ -15,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible">
+        tools:visibility="visible">
 
         <Button
             android:id="@+id/button4"
@@ -23,8 +24,11 @@
             android:layout_height="80dp"
             android:layout_marginBottom="28dp"
             android:layout_marginTop="147dp"
+            android:background="#020202"
             android:onClick="PlayAgain"
             android:text="Play Again!"
+            android:textColor="#FF0000"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -35,9 +39,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
+            android:fontFamily="@font/galindo"
             android:text="TextView"
             android:textAlignment="center"
-            android:textSize="30sp"
+            android:textColor="#FF0000"
+            android:textSize="36sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -55,16 +61,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        tools:visibility="invisible">
 
         <Button
             android:id="@+id/BowlButton"
             android:layout_width="0dp"
             android:layout_height="48dp"
             android:layout_marginTop="90dp"
+            android:background="#40655F54"
+            android:fontFamily="@font/amiko"
             android:gravity="center"
             android:onClick="bowl"
             android:text="Bowl"
+            android:textColor="#0022FF"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,9 +85,13 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="90dp"
+            android:background="#40655F54"
+            android:fontFamily="@font/amiko"
             android:gravity="center"
             android:onClick="bat"
             android:text="Bat"
+            android:textColor="#0022FF"
+            android:textSize="30sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -105,18 +119,21 @@
         android:layout_height="264dp"
         android:layout_marginEnd="100dp"
         android:layout_marginStart="100dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/NextGame"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
             android:onClick="NextGame"
             android:text="Done"
+            android:textColor="#FF0000"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@+id/Tossbutton"
             app:layout_constraintEnd_toEndOf="@+id/Tossbutton" />
 
@@ -125,8 +142,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
+            android:background="#00FFFFFF"
             android:onClick="TossClicked"
             android:text="ok"
+            android:textColor="#FF0000"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -139,6 +159,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:textAlignment="center"
+            android:textColor="@android:color/background_dark"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -148,9 +169,10 @@
             android:id="@+id/TossComputer"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginBottom="22dp"
+            android:layout_marginBottom="8dp"
             android:text="It's Time for Toss"
             android:textAlignment="center"
+            android:textColor="#57303D"
             android:textSize="24sp"
             app:layout_constraintBottom_toTopOf="@+id/TossPlayer"
             app:layout_constraintEnd_toEndOf="parent"
@@ -162,18 +184,24 @@
         android:id="@+id/GameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/Next"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:background="#00FFFFFF"
             android:onClick="Howzat"
             android:text="Done"
+            android:textColor="#FF0000"
+            android:textColorLink="#FF0303"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="@+id/button"
             app:layout_constraintStart_toStartOf="@+id/button"
             app:layout_constraintTop_toTopOf="@+id/button" />
@@ -183,12 +211,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="185dp"
+            android:background="#00FFFFFF"
             android:onClick="cliked"
             android:text="Ok"
+            android:textColor="#FF0000"
+            android:textColorHint="#FFFFFF"
+            android:textSize="24sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            tools:visibility="invisible" />
+            tools:visibility="visible" />
 
         <EditText
             android:id="@+id/editText"
@@ -198,6 +231,7 @@
             android:ems="10"
             android:inputType="numberDecimal"
             android:textAlignment="center"
+            android:textColor="@android:color/black"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
@@ -208,10 +242,12 @@
             android:layout_height="80dp"
             android:layout_marginBottom="500dp"
             android:layout_marginTop="100dp"
+            android:fontFamily="@font/coming_soon"
             android:gravity="center"
-            android:text=""
             android:textAlignment="center"
+            android:textColor="#0B0B0B"
             android:textSize="30sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -272,7 +308,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginBottom="184dp"
+            android:fontFamily="sans-serif-condensed"
             android:textAlignment="center"
+            android:textColor="#000000"
             android:textSize="36sp"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
@@ -304,18 +342,23 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="invisible">
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/Even"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="400dp"
+            android:background="#40655F54"
+            android:fontFamily="@font/amiko"
             android:onClick="even"
+            android:shadowColor="#F6EEEE"
             android:text="Even"
             android:textAlignment="center"
-            android:textSize="12sp"
+            android:textAllCaps="false"
+            android:textColor="#0022FF"
+            android:textSize="50sp"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -326,8 +369,13 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="109dp"
+            android:background="#40655F54"
+            android:fontFamily="@font/amiko"
             android:onClick="Odd"
-            android:text="odd"
+            android:text="Odd"
+            android:textAllCaps="false"
+            android:textColor="#0022FF"
+            android:textSize="50sp"
             app:layout_constraintBottom_toTopOf="@+id/Even"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
